file(GLOB example_src "*.cpp")

foreach(srcfile ${example_src})
  string(REPLACE ".cpp" "" executable ${srcfile})
  get_filename_component(executable ${executable} NAME)
  add_executable(${executable} ${srcfile})
  target_include_directories(${executable} PUBLIC ${CUFINUFFT_INCLUDE_DIRS})
  target_link_libraries(${executable} cufinufft)
  target_compile_features(${executable} PRIVATE cxx_std_17)
endforeach()
