[build-system]
requires = [
    "scikit-build-core >= 0.4.3",
    "cmake >= 3.25",
    "ninja >= 1.9.0",
]

build-backend = "scikit_build_core.build"

[project]
name = "finufft"
readme = "README.md"
requires-python = ">=3.10"
dependencies = ["numpy >= 1.12.0", "packaging"]
authors = [
    {name = "Jeremy Magland"},
    {name = "Daniel Foreman-Mackey"},
    {name = "Joakim Anden"},
    {name = "Libin Lu"},
    {name = "Marco Barbone"},
    {name = "Robert Blackwell"},
    {name = "Alex Barnett"}]
maintainers = [{name = "Alex Barnett", email = "abarnett@flatironinstitute.org"}]
description = "Python interface to FINUFFT"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: C++",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows"
    ]
dynamic = ["version"]

[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "0.4"
# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Tell skbuild to where to find CMakeLists.txt.
cmake.source-dir = "../../"
cmake.targets = ["finufft"]
cmake.define = {"FINUFFT_BUILD_PYTHON" = "ON"}
cmake.args = ["-G Ninja"]
wheel.packages = ["finufft"]
editable.mode = "redirect"

# Indicate that we don't depend on the CPython API
wheel.py-api = "py3"

sdist.exclude = [".*",
                 "CMakePresets.json",
                 "contributing.md",
                 "CHANGELOG",
                 "devel",
                 "docs",
                 "examples",
                 "fortran",
                 "Jenkinsfile",
                 "lib*",
                 "make*",
                 "matlab",
                 "perftest",
                 "test",
                 "tools",
                 "tutorial",
                 "include/cufinufft*",
                 "python/cufinufft",
                 "src/cuda",
                 "wheelhouse"]

[tool.scikit-build.metadata.version]
# Instead of hardcoding the version here, extract it from the source files.
provider = "scikit_build_core.metadata.regex"
input = "finufft/__init__.py"

[tool.cibuildwheel]
# Necessary to see build output from the actual compilation
build-verbosity = 1
# Python floor (>=3.10) comes from requires-python; here we only drop
# PyPy and unsupported architectures.
skip = "pp* *-manylinux_i686 *_ppc64le *_s390x *_universal2"
test-requires = ["pytest", "pytest-mock"]
test-command = "pytest {project}/python/finufft/test"

# Ensure that the wheels are compatible with x86-64. Without this, they crash
# in x86_64 compatibility mode (Rosetta 2) on macOS.
config-settings = {"cmake.define.FINUFFT_ARCH_FLAGS" = "-march=x86-64", "cmake.define.CMAKE_VERBOSE_MAKEFILE" = "ON"}

# TODO: CIBW crashes when we try to make config-settings above into a table. Why?

[tool.cibuildwheel.linux]
# Use manylinux_2_28 (AlmaLinux 8, glibc 2.28) rather than the older
# manylinux2014 (CentOS 7, glibc 2.17), which is EOL and ships a frozen,
# ancient GCC. This matches cibuildwheel's current default and what
# numpy/scipy build against. Wheels therefore require glibc >= 2.28
# (RHEL 8 / Ubuntu 18.10+), the same floor as numpy/scipy.
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
musllinux-x86_64-image = "musllinux_1_2"

[tool.cibuildwheel.windows]
before-build = "pip install delvewheel"
# CIBW doesn't do vendoring of DLLs on Windows by default, so we have to
# install delvewheel and run it.
repair-wheel-command = "delvewheel repair -v --analyze-existing -w {dest_dir} {wheel}"

# Override for ARM builds (macOS arm64 and Linux/musl aarch64): the
# default config-settings pass -march=x86-64, which is invalid on ARM, so
# clear FINUFFT_ARCH_FLAGS there. Note "*aarch64*" does not match the
# "*arm64*" glob, so both patterns are required.
[[tool.cibuildwheel.overrides]]
select = "*arm64* *aarch64*"
config-settings = { "cmake.define.FINUFFT_ARCH_FLAGS" = "", "cmake.define.CMAKE_VERBOSE_MAKEFILE" = "ON" }
